--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "entr": "ls *.js | entr -r node app.js"
   },
   "keywords": [],
   "author": "Xu Chunyang",
@@ -12,6 +13,10 @@
   "dependencies": {
     "csv-parser": "^2.3.3",
     "debug": "^4.2.0",
+    "express": "^5.0.0-alpha.8",
     "sqlite3": "^5.0.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
