--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parser": "^2.3.3",
     "debug": "^4.2.0",
     "express": "^5.0.0-alpha.8",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
