--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "entr": "ls *.js | DEBUG=app entr -r node app.js"
+    "entr": "ls *.js *.pug | DEBUG=app entr -r node app.js"
   },
   "keywords": [],
   "author": "Xu Chunyang",
@@ -15,6 +15,7 @@
     "debug": "^4.2.0",
     "express": "^5.0.0-alpha.8",
     "morgan": "^1.10.0",
+    "pug": "^3.0.0",
     "sqlite3": "^5.0.0"
   },
   "devDependencies": {
